# docxeval

./: .gitignore  README.md  pyproject.toml
scripts/: run.sh
scripts/experiment_00/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
scripts/experiment_01/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
scripts/experiment_02/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
scripts/experiment_03/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
scripts/explanation_analysis/: generate_plots.sh
scripts/explanation_analysis/metrics/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
scripts/explanation_analysis/viz_main/: 00_cfgs_cls.sh  01_cfgs_ser.sh  02_cfgs_qa.sh
src/docxeval/attn_explainers/: question_answering.py  sequence_classification.py  token_classification.py
src/docxeval/explainers/: question_answering.py  sequence_classification.py  token_classification.py
src/docxeval/explanation_analyzer/: explanation_analyzer.py  question_answering.py  sequence_classification.py  token_classification.py
src/docxeval/explanation_analyzer/explanation_summarizer/: explanation_summarizer.py  explanation_summary.py  summarization_processors.py
src/docxeval/explanation_analyzer/plotters/: _helpers.py  all.py  plotter.py  qa.py  seq_cls.py  token_cls.py
src/docxeval/explanation_analyzer/utils/: explanation_units.py  metric_funcs.py  viz.py  x_metric_post_processors.py
src/docxeval/perturbation_robustness/: modality_wise_mean_perf.py  question_answering.py  sequence_classification.py  task_wise_modality_rankings.py  token_classification.py
src/docxeval/trainers/: question_answering.py  sequence_classification.py  token_classification.py
(+11 files in other folders)
